# reviewlens-ai

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-dev.yml  provision-dev.yml  teardown-dev.yml
ai-context/: api-conventions.md  architecture-brief.md  coding-standards.md  iaas-standards.md  product-brief.md  ui-ux-standards.md
ai-transcripts/: 1-remove clerk auth account etc.md  copilot-session-c1e2d724-f753-4ca9-83df-3dc3a35b0bb0.raw.jsonl
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260508_0001_initial_persistence.py
apps/api/app/: auth.py  config.py  main.py  routes.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/db/models/: __init__.py  user.py  workspace.py  workspace_member.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: clerk_profile.py  user_bootstrap.py
apps/api/tests/: conftest.py  test_cors_settings.py  test_endpoints.py  test_persistence_models.py  test_user_bootstrap_service.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
docs/architecture/: deployment.md  notes.md  overview.md
docs/decisions/: 0001-initial-stack.md  0002-frontend.md  0003-backend.md  0004-iaas-refactor.md
docs/development-logs/: 0-development-plan.md  1-frontend-scaffold.txt  2-clerk-auth.txt  7-ci.txt  (+6 more)
infra/: README.md
scripts/: aws-env.sh  cloud-status.sh  dev-db-reset.sh  dev-db-up.sh  export-copilot-transcript.sh
(+47 files in other folders)
